kubernetes/schoodle-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schoodle-api
  labels:
    app: schoodle-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: schoodle-api
  template:
    metadata:
      labels:
        app: schoodle-api 
    spec:
      containers:
      - name: schoodle-api
        image: esiee79798987/schoodle-api:1
        ports:
        - containerPort: 5000
