kubernetes/schoodle-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: schoodle-api
spec:
  selector:
    app: schoodle-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
