kubernetes/schoodle-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: "localhost.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: schoodle-api
            port:
              number: 5000
